# BE_one_piece

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.local.yml  gunicorn.conf.py  makefile  manage.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  discord.yml
.github/workflows/: aws.yml  checks.yml  discord.yml
.github/workflows /: discord.yml
apps/analysis/: apps.py  client.py  models.py  scent-mock-data-30.json
apps/analysis/migrations/: 0001_initial.py  0002_initial.py  0002_seed_scent_data.py  0003_imageanalysis_rating_and_more.py  0003_rename_ai_categories_imageanalysis_ai_tags.py  0004_alter_imageanalysis_review_and_more.py  0004_imageresource_imageanalysis_image_resource.py  0005_alter_imageanalysis_recommended_scent.py  0005_alter_imagecoloranalysis_analysis.py  0005_remove_scent_scent_tags_gin_and_more.py  0006_scent_keywords_scent_tags_scent_scent_tags_gin_and_more.py  0007_seed_scent_data.py
apps/analysis/serializers/: analysis_serializers.py  review_serializers.py  scent_serializers.py
apps/analysis/service/: analysis_service.py  color_serivce.py  review_service.py  scent_service.py
apps/analysis/tests/: test_models.py  test_serializers.py
apps/analysis/urls/: admin_urls.py  analysis_urls.py  scent_urls.py
apps/analysis/views/: analysis_views.py  review_views.py  scent_views.py
apps/chatbot/: apps.py  exceptions.py  models.py  serializers.py  tests.py  urls.py
apps/chatbot/constants/: blocked_keywords.py  mapping_keywords.py
apps/chatbot/migrations/: 0001_initial.py  0002_initial.py  0003_chatbotrecommendation_rating_and_more.py  0004_chatbotrecommendation_reply.py  0005_chatbotrecommendation_user_message.py
apps/chatbot/prompts/: chatbot_prompts.py  support_context.py
apps/chatbot/services/: chatbot_completion_policy.py  chatbot_service.py  context_service.py  recommendation_history_list.py  scent_filter_service.py
apps/chatbot/tests/: test_chat_views.py  test_chatbot_completion_policy.py  test_context_service.py  test_models.py  test_recommendation_views.py  test_scent_filter_service.py  test_serializers.py  test_session_views.py
apps/chatbot/views/: chat_views.py  recommendation_views.py  session_views.py
apps/core/: modesl.py  paginations.py
apps/core/serializers/: presigned_url_serializer.py
apps/core/services/: presigned_url_service.py
apps/core/utils/: cloud_front.py  exception_handler.py  gemini_utils.py  gool_ai_studio.py  hashids.py  permissions.py  s3_handler.py
apps/core/views/: presigned_url.py
apps/question/: admin.py  apps.py  extend_schema.py  google_ai_studio.py  gool_ai_studio.py  models.py  schemas.py  urls.py  views.py
apps/question/migrations/: 0001_initial.py  0002_alter_questionsresults_answer_ai.py  (+22 more)
apps/scent/: apps.py  models.py
apps/user/: choices.py
apps/users/: apps.py  choices.py
config/: settings.py  urls.py  views.py  wsgi.py
config/settings/: base.py  local.py  prod.py
deployments/docker/: Dockerfile  docker-compose.local.yml  docker-compose.prod.yml
deployments/ng/: gunicorn.conf.py  nginx.conf
scripts/: code_formatting.sh  seed_scent.py  test.sh
templates/: og_share.html  share_template.html
(+112 files in other folders)
